--- a/style.css
+++ b/style.css
@@ -682,6 +682,9 @@ textarea {
     overflow-x: hidden;
     position:relative;
     width:100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
   }
   .entire{
     padding: 2em;
