--- a/style.css
+++ b/style.css
@@ -186,6 +186,12 @@ html {
     /*font-size: 1.20vmax;*/
     object-fit: cover;
 }
+.resume h3{
+  font-family: 'Raleway', sans-serif;
+  font-style: italic;
+  text-align: center;
+  padding-bottom:3%;
+}
 .resume3 h1{
     height:3em;
     color: rgb(95, 95, 95);
