--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@ a:hover
    overflow: hidden;
    width: 350px;
    height: 350px;
-   background-image: url("asset/pokemon.png");
+   background-image: url("asset/fortis.png");
    background-size: cover;
    border: 1px hidden whitesmoke;
   border-radius: 5px;
