--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ a:hover
     width: 350px;
     height: 350px;
   
-     background-image: url("asset/pokemon1.PNG");
+     background-image: url("asset/Dokemon.PNG");
      background-position: bottom;
      background-size: cover;
      border: 1px hidden whitesmoke;
