--- a/style.css
+++ b/style.css
@@ -742,9 +742,12 @@ textarea {
     overflow-x: hidden;
     position:relative;
     width:100%;
+    min-height:100%;
+    padding-bottom:30px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
+
   }
   .entire{
     padding: 2em;
@@ -809,7 +812,8 @@ textarea {
   margin-right: -14em;
 }
 .cell{
-  margin-top: 33.333%;
+  margin-top: 25%;
+  margin-bottom: 25%;
   display: flex;
   color: rgb(95, 95, 95);
   text-align: center;
@@ -995,8 +999,10 @@ border-top: 1px solid rgb(95, 95, 95);
   display: none;
 }
 footer{
-  position: relative;
+  position: absolute;
+  bottom:0;
   width:100%;
+  height:25px;
 }
 
 
