--- a/style.css
+++ b/style.css
@@ -1,141 +1,10 @@
-
-
-
-
-::-webkit-scrollbar {
-  width: 5px;  
-  background: transparent;
+body {
+  background-image: url(asset/teahub.io-professional-wallpaper-354842.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow-x: hidden;
+  background-attachment: fixed;
 }
-/* Optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-  background:  #b23b3b;
-}
-@keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-  }
-  
-  @-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-  }
-  
-  @-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-  }
-  
-  @-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-  }
-  
-  @-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-  }
-body{
-background-image: url(asset/test3.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-overflow-x: hidden;
-
-background-attachment: fixed;
-}
-.entire{
-  background-color: rgba(245, 245, 245, 0.692);
-}
-html {
-
-  }
-
-#profileImage{
-    display: flex;
-    justify-content: left;
-}
-#portrait{
-    width: 120px;
-    height:120px;
-    border-radius: 50%;
-    border: 1px solid grey;
-    margin-top: 2em;
-    margin-left:2em;
-}
-#innerProfile{
-    width:30em;
-    height: 7.5em;
-    color: rgb(95, 95, 95);
-    margin-top: 2em;
-    margin-left: 1em;
-    border: none;
-    border-radius: 10px;
-    position: relative;
-}
-#innerProfile h1{
-    margin:auto;
-    height:3em;
-    padding-top: 8%;
-    font-family: 'Raleway', sans-serif;
-    z-index: 1;
-}
-#testCenter{
-    display:flex;
-    justify-content: center;
-    margin-top: 10%;
-}
-.portTopCenter{
-    display:flex;
-    position: relative;
-    margin-left: auto;
-    margin-right:auto;
-    white-space: nowrap;
-    flex-direction: column;
-    flex-wrap: wrap;
-    /*background-color: rgba(165, 165, 165, 0.596);*/
-    border:1px hidden white;
-    border-radius: 2px;
-    text-align: center;
-    width: auto;
-    height:20em;
-    animation: fade; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 2s; /* don't forget to set a duration! */
-}
-.portTopCenter h1{
-    color: rgb(95, 95, 95);
-    font-size: 400%;
-    margin-top: 1em;
-    font-family: 'Raleway', sans-serif;
-    outline: white;
-    z-index: 1;
-}
-.portTopCenter h2{
-    color: rgb(95, 95, 95);
-    font-size: 200%;
-    margin-top: -.5em;
-    font-family: 'Raleway', sans-serif;
-    outline: white;
-}
-
-.birdie img{
-  position:relative;
-  margin-top:0;
-  margin-bottom: -6.3em;
-  margin-right: -22.5em;
-  width: 125px;
-  animation: bounce; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 3s; /* don't forget to set a duration! */
-}
-
-#testCenter a img{
-  width:50px;
-}
-#testCenter a img:hover{
-	transform: scale(1.1);
-}
-
-
-
-
 .cell{
   display:none;
   margin-top: -8em;
@@ -151,243 +20,12 @@ html {
   font-size: x-small;
 }
 
-.resume{
-  color: rgb(95, 95, 95);
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 15em;
-  /*background-image: url("asset/collage6.JPG");*/
-  background-color:  rgba(245, 245, 245, 0.5);
-  background-position: center;
-  height: auto;
-  max-height: 40em;
-  width:100%;
-  overflow: hidden;
-  text-align: center;
-}
-
-.resume3{
-
-    background-color:  rgba(245, 245, 245, 0.750);
-    border:1px hidden white;
-    height: 350px;
-    width:100%;
-    
-}
-.resume h1{
-  padding-top: 3%;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-.resume p{
-  color: rgb(95, 95, 95);
-    align-content: center;
-    padding: 2em;
-    max-width: 70%;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    font-size: 1.15em;
-    /*font-size: 1.20vmax;*/
-    object-fit: cover;
-}
-.resume h3{
-  font-family: 'Raleway', sans-serif;
-  font-style: italic;
-  text-align: center;
-  padding-bottom:3%;
-}
-.resume3 h1{
-    height:3em;
-    color: rgb(95, 95, 95);
-    padding-top: 3%;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    margin-bottom:0;
-}
-
-
-.innerResume{
-height: 25em;
-background-color: rgba(245, 245, 245, 0.637);
-width: 20em;
-border: 1px hidden black;
-border-radius: 2px;
-padding:1em;
-box-shadow: 0 3px 8px 5px rgba(0, 0, 0, 0.12);
-}
-
-a
-{
-  text-decoration: none;
-  color: rgb(95, 95, 95);
-  
-  transition: color 0.3s ease;
-}
-
-a:hover
-{
-  color: #b23b3b;
-}
-
-#menuToggle
-{
-  display: block;
-  position: absolute;
-  top: 50px;
-  right: 50px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: rgb(95, 95, 95);
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: rgb(95, 95, 95);;
-}
-
-/*
- * hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * more hamburger movement
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  opacity: 1;
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * hamburger menu
- */
-#menu
-{
-  text-align: center;
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 0;
-  padding: 50px;
-  padding-top: 125px;
-  right: -55px;
-  box-shadow: 0 .5px 3px .5px rgba(71, 71, 71, 0.705);
-  background:  rgba(245, 245, 245, 0.795);
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased; /* to stop flickering of text in safari */
-  transform-origin: 0% 0%;
-  transform: translate(100%, 0);
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu li
-{
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
- * fade it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: scale(1.0, 1.0);
-  opacity: 1;
-}
-
-#skillsParent{
-    display:flex;
-    position: relative;
-    margin-top: 0em;
-    width: 100%;
-    height: 350px;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
-    align-items: center;
-
-
-    
-   
-}
-#skillsChild{
-  margin-top: -100px;
-    display: flex;
-    height: 200px;
-    width: 200px;
-
-}
-#skillsChild img{
-    height: 160px;
-    width: 160px;
-    position:relative;
-    transition: 0.35s;
-}
-#skillsChild img:hover{
-  -webkit-filter: drop-shadow(5px 5px 5px rgb(95, 95, 95));
-  filter:drop-shadow(5px 5px 5px rgb(95, 95, 95));
-  
-}
 .projectParent{
   display:flex;
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
-  margin-top: 0;
+  margin-top: 100%;
   background-color: whitesmoke;
   border:1px hidden white;
   height: auto;
@@ -412,11 +50,8 @@ a:hover
 }
 .row{
   margin:none;
-
 }
-
 .projExample1{
-
   position:relative;
   display:flex;
   margin-top:75px;
@@ -467,14 +102,6 @@ a:hover
    border: 1px hidden whitesmoke;
   border-radius: 5px;
   box-shadow: 0 .5px 3px .5px rgba(71, 71, 71, 0.705);
- /*   opacity:0;
-    -webkit-animation: fadeIn 1s 2.75s;
-    -moz-animation: fadeIn 1s 2.75s;
-    -o-animation: fadeIn 1s 2.75s;
-    -ms-animation: fadeIn 1s 2.75s;
-    animation: fadeIn 1s 2.75s;
-    -webkit-animation-fill-mode: forwards;
-      animation-fill-mode:forwards;*/
   }
   .projExample5{
     display:flex;
@@ -532,7 +159,6 @@ a:hover
     box-shadow: 0 .5px 3px .5px rgba(71, 71, 71, 0.705);
    }
 .overlay{
-
   position: relative;
   background-color: rgba(255, 255, 255, 0.644);
   width:350px;
@@ -542,7 +168,6 @@ a:hover
   color: white;
   font-size: 20px;
   text-align: center;
- 
   border:hidden;
   border-radius: 5px;
   display: flex;
@@ -550,7 +175,6 @@ a:hover
   justify-content: center;
   align-items: center;
   word-wrap: nowrap;
-  
 }
 .overlay img{
   margin-top: 3em;
@@ -560,9 +184,7 @@ a:hover
 }
 .overlay p{
   padding:2em;
-
   color: black;
-  
 }
 .projExample1:hover .overlay {
   opacity: 1;
@@ -609,8 +231,6 @@ footer {
   padding: 1.5em 2.0em;
   box-shadow: 0px 0 10px -3px rgba(0,0,0,0.75);
   overflow: hidden;
-  
-  
 }
 
 .footer img{
@@ -626,65 +246,7 @@ footer {
   border:hidden;
   outline: 0;
 }
-.modal{
- background-color: hidden;
-}
-.input{
-  padding-top: 20em;
-  margin: auto;
-  width:30em;
-  height:40em;
-  border:1px hidden black;
-  border-radius: 5px;
-  background-color: rgba(245, 245, 245, 0.596);
-}
-.submit{
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  text-align: center;
-}
-.modal-footer button{
-    
-  background-color: #b23b3b;
-  color: whitesmoke;
-  border: hidden;
-  border-radius: 5px;
-  padding: 0.5em;
-  text-align: center;
-  cursor: pointer;
-  margin:0.5em;
-}
 
-.modal-footer .btn{
-    
-  background-color: #b23b3b;
-  color: whitesmoke;
-  border: hidden;
-  border-radius: 5px;
-  padding: 0.5em;
-  text-align: center;
-  cursor: pointer;
-  margin:0.5em;
-}
-.modal-header{
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-.emailForm {
-
-  border:1px solid grey;
-  border-radius: 10px;
-  margin-top: 20px;
-  padding-bottom: 10px;
-
-}
-
-textarea {
-
-  height: 220px;
-}
 
 
 
