--- a/less.less
+++ b/less.less
@@ -259,10 +259,13 @@ a:hover {
 .modal-content h5 {
   color: rgb(95, 95, 95);
   text-align: center;
-
   &:first-child {
     margin-top: 2em;
   }
+}
+.modal-content p{
+  color: rgb(95, 95, 95);
+  text-align: center;
 }
 
 .skillsContainer p {
