--- a/less.less
+++ b/less.less
@@ -48,11 +48,12 @@ a:hover {
 
 .portTopCenter h1 {
   color: rgb(95, 95, 95);
+  position: relative;
   font-size: 400%;
   margin-top: 1em;
   font-family: 'Raleway', sans-serif;
   outline: white;
-  z-index: 1;
+  z-index: 0;
 }
 
 .portTopCenter h2 {
@@ -60,13 +61,18 @@ a:hover {
   font-size: 200%;
   font-family: 'Raleway', sans-serif;
   outline: white;
+  z-index: 0;
 }
-
+.birdie{
+  z-index: 10;
+  position: relative;
+}
 .birdie img {
   position: relative;
   margin-top: 0;
   margin-bottom: -6.3em;
   margin-right: -22.5em;
+  z-index: 10;
   width: 125px;
   animation: bounce;
   animation-duration: 3s;
