--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@ body {
     overflow: hidden;
     width: 350px;
     height: 350px;
-  
-     background-image: url("asset/springtree.PNG");
+
+     background-image: url("asset/springtree1.PNG");
      background-position: bottom;
      background-size: cover;
      border: 1px hidden whitesmoke;
