--- a/less.less
+++ b/less.less
@@ -386,6 +386,14 @@ a:hover {
   }
 }
 
+.pro-work {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 1em;
+  padding-top: 1em;
+}
+
+
 
 //Animations
 
