--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
      overflow: hidden;
      width: 350px;
      height: 350px;
-     background-image: url("asset/iRestaurant.PNG");
+     background-image: url("asset/carlton.png");
      background-size: cover;
      border: 1px hidden whitesmoke;
     border-radius: 5px;
